Logic change from lives to wins and frontend optimization

--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,7 @@ body {
     text-shadow: rgb(34, 34, 34) 2px 0px 0px, rgb(34, 34, 34) 1.75517px 0.958851px 0px, rgb(34, 34, 34) 1.0806px 1.68294px 0px, rgb(34, 34, 34) 0.141474px 1.99499px 0px, rgb(34, 34, 34) -0.832294px 1.81859px 0px, rgb(34, 34, 34) -1.60229px 1.19694px 0px, rgb(34, 34, 34) -1.97998px 0.28224px 0px, rgb(34, 34, 34) -1.87291px -0.701566px 0px, rgb(34, 34, 34) -1.30729px -1.5136px 0px, rgb(34, 34, 34) -0.421592px -1.95506px 0px, rgb(34, 34, 34) 0.567324px -1.91785px 0px, rgb(34, 34, 34) 1.41734px -1.41108px 0px, rgb(34, 34, 34) 1.92034px -0.558831px 0px, 4px 4px 8px #21212199;
 }
 
-.cards, #attack-buttons {
+.cards, .attack-buttons {
     display: flex;
     gap: 10px;
 }
@@ -105,6 +105,7 @@ body {
 }
 
 .attack-button {
+    width: 80px;
     background: #03539770;
     padding: 10px;
     box-sizing: border-box;
@@ -158,7 +159,7 @@ body {
     justify-items: center;
 }
 
-#attack-messages .health {
+#attack-messages .counter {
     width: 180px;
     display: flex;
     flex-direction: column;
@@ -174,6 +175,10 @@ body {
 
 @media (max-width: 500px) {
     .cards {
+        flex-direction: column;
+    }
+
+    .attack-buttons {
         flex-direction: column;
     }
 
